Fix alignment issues in leaderboard

--- a/website/_sass/_leaderboard.scss
+++ b/website/_sass/_leaderboard.scss
@@ -487,9 +487,9 @@
     border-radius: 4px;
     z-index: 9999;
     width: 15em;
-    left: 11px;
-    top: 2em;
-    transform: translateX(-50%);
+    left: 2em;
+    top: 12.5px;
+    transform: translateY(-50%);
 
     h4 {
         text-transform: uppercase;
